--- a/views/template/footer.ejs
+++ b/views/template/footer.ejs
@@ -72,6 +72,7 @@
                 <option value="2">Gerente</option>
                 <option value="3">Ministro</option>
                 <option value="4">Registro</option>
+                <option value="5">Eventos</option>
                 
               </select>
             </div>
@@ -742,6 +743,37 @@ $.widget.bridge('uibutton', $.ui.button)
         }
     }
     }).buttons().container().appendTo('#tablamiembros_wrapper .col-md-6:eq(0)');
+
+    $('#tablaeventompj').DataTable({
+      "paging": true,
+      "lengthChange": false,
+      "searching": true,
+      "ordering": true,
+      "info": false,
+      "autoWidth": true,
+      "responsive": true,
+      "buttons": ["excel"],
+      language: {
+        "decimal": "",
+        "emptyTable": "Sin Resultados",
+        "info": "Mostrando _START_ a _END_ de _TOTAL_ Entradas",
+        "infoEmpty": "Mostrando 0 to 0 of 0 Entradas",
+        "infoFiltered": "(Filtrado de _MAX_ total entradas)",
+        "infoPostFix": "",
+        "thousands": ",",
+        "lengthMenu": "Mostrar _MENU_ Entradas",
+        "loadingRecords": "Cargando...",
+        "processing": "Procesando...",
+        "search": "Buscar:",
+        "zeroRecords": "Sin resultados encontrados",
+        "paginate": {
+            "first": "Primero",
+            "last": "Ultimo",
+            "next": "Siguiente",
+            "previous": "Anterior"
+        }
+    }
+    }).buttons().container().appendTo('#tablaeventompj_wrapper .col-md-6:eq(0)');
 
     $('#tabla-visitantes').DataTable({
       "paging": true,
