--- a/views/template/footer.ejs
+++ b/views/template/footer.ejs
@@ -746,10 +746,10 @@ $.widget.bridge('uibutton', $.ui.button)
 
     $('#tablaeventompj').DataTable({
       "paging": true,
-      "lengthChange": false,
+      "lengthChange": true,
       "searching": true,
       "ordering": true,
-      "info": false,
+      "info": true,
       "autoWidth": true,
       "responsive": true,
       "buttons": ["excel"],
