--- a/views/template/sidebar.ejs
+++ b/views/template/sidebar.ejs
@@ -136,11 +136,11 @@
           <% } %>
 
           <% if(user_type==1 || user_type==5) { %>
-            <li class="nav-header">EVENTOS</li>
+            <li class="nav-header">MPJ</li>
           <li class="nav-item">
             <a href="/eventompj" class='nav-link <%= menuactivo=="eventompj" ? "active":"" %> ' >
               <i class="nav-icon fa fa-tasks"></i>
-                Evento MPJ
+                Registro Coordinadores
                 <!-- <span class="right badge badge-danger">New</span> -->
               </p>
             </a>
