--- a/views/template/sidebar.ejs
+++ b/views/template/sidebar.ejs
@@ -2,7 +2,7 @@
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a href="/home" class="brand-link">
-      <img src="dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+      <img src="/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
       <span class="brand-text font-weight-light">SISCOI</span>
     </a>
 
@@ -11,7 +11,7 @@
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
-          <img src="dist/img/icono-imagen-perfil.png" class="img-circle elevation-2" alt="User Image">
+          <img src="/dist/img/icono-imagen-perfil.png" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
           <a href="#" class="d-block"><%= user_name %><!--Alexander Pierce--></a>
@@ -133,6 +133,16 @@
               </p>
             </a>
           </li>
+
+          <li class="nav-item">
+            <a href="/registroasistencia" class='nav-link <%= menuactivo=="asistenciamiembro" ? "active":"" %> ' >
+              <i class="nav-icon fa fa-tasks"></i>
+                Asistencia por Miembro
+                <!-- <span class="right badge badge-danger">New</span> -->
+              </p>
+            </a>
+          </li>
+
           <% } %>
 
           <% if(user_type==1 || user_type==5) { %>
