--- a/views/template/footer.ejs
+++ b/views/template/footer.ejs
@@ -367,6 +367,7 @@
                 <select class="form-control" style="width: 100%;" name="miembro_horario" id="miembro_horario">
                   <option value="09:00 am">09:00 am</option>
                   <option value="12:00 pm">12:00 pm</option>
+                  <option value="Servidor(a)">Servidor(a)</option>
                   <option value="09:00 am / 12:00 pm">Ambos</option>
                   <option value="06:00 pm">06:00 pm</option>
                  
