--- a/views/template/footer.ejs
+++ b/views/template/footer.ejs
@@ -112,7 +112,10 @@
     <div class="modal-content">
       <form name="form_miembros" id="form_miembros" action="/savemiembro" method="post">
       <div class="modal-header">
-        <h4 class="modal-title">Gestión de Miembros</h4>
+        <h4 class="modal-title">Gestión de Miembros
+          <input type="hidden" class="form-control" name="user_id_actual" id="user_id_actual">
+
+        </h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -238,7 +241,9 @@
       <div class="modal-content">
         <form name="form_miembros" id="form_miembros" action="/saveregistroasistencia" method="post">
         <div class="modal-header">
-          <h4 class="modal-title">Registrar Asistencia</h4>
+          <h4 class="modal-title">Registrar Asistencia
+            <input type="hidden" class="form-control" name="user_id_actual" id="user_id_actual">
+          </h4>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -805,7 +810,7 @@ $.widget.bridge('uibutton', $.ui.button)
             "previous": "Anterior"
         }
     }
-    }).buttons().container().appendTo('#tablamiembros_wrapper .col-md-6:eq(0)');
+    }).buttons().container().appendTo('#tabla-visitantes_wrapper .col-md-6:eq(0)');
 
     $('#tabla-seguimiento').DataTable({
       "paging": true,
@@ -1201,7 +1206,9 @@ $('select option[value="'+$('#nos_conocio_html_'+miembro_id).val()+'"]').attr("s
 $("#form_miembros").attr("action", '/editarmiembro')
 
 
+
 $('#modal-miembros').modal('show')
+
   }
 
 
@@ -1209,6 +1216,7 @@ $('#modal-miembros').modal('show')
   function modalMiembroRegistro(miembro_id){
 
 //alert(miembro_id);
+$('#user_id_actual').val($('#user_id_logueado').val())
 $('#miembro_nombres').val($('#name_html_'+miembro_id).val())
 $('#miembro_apellidos').val($('#apellido_html_'+miembro_id).val())
 $('#miembro_id').val($('#id_html_'+miembro_id).val())
@@ -1260,6 +1268,8 @@ $('#modal-asignarseguimiento').modal('show')
   $('.btnNewMiembro').on('click', function (e) {
 
 	  document.getElementById("form_miembros").reset(); 
+    
+  $('#user_id_actual').val($('#user_id_logueado').val())
 	  $('#modal-miembros').modal('show')
 	})
 
