--- a/views/template/sidebar.ejs
+++ b/views/template/sidebar.ejs
@@ -123,7 +123,7 @@
             </li>
             <% } %>
            
-            <% if(user_type==1) { %>
+            <% if(user_type==1 || user_type==4) { %>
             <li class="nav-header">CULTOS</li>
           <li class="nav-item">
             <a href="/registroasistencia" class='nav-link <%= menuactivo=="registroasistencia" ? "active":"" %> ' >
@@ -134,14 +134,14 @@
             </a>
           </li>
 
-          <li class="nav-item">
+          <!--<li class="nav-item">
             <a href="/registroasistencia" class='nav-link <%= menuactivo=="asistenciamiembro" ? "active":"" %> ' >
               <i class="nav-icon fa fa-tasks"></i>
                 Asistencia por Miembro
-                <!-- <span class="right badge badge-danger">New</span> -->
+                <span class="right badge badge-danger">New</span> 
               </p>
             </a>
-          </li>
+          </li>-->
 
           <% } %>
 
