--- a/views/template/footer.ejs
+++ b/views/template/footer.ejs
@@ -927,9 +927,9 @@ $.widget.bridge('uibutton', $.ui.button)
      miembro_telefono: {
         required: true
       },
-      miembro_nacimiento: {
+      /*miembro_nacimiento: {
         required: true
-      },
+      },*/
 
       miembro_cedula: {
         required: true
@@ -951,9 +951,9 @@ $.widget.bridge('uibutton', $.ui.button)
         required: "Ingrese una cedula",
       }, 
 
-      miembro_nacimiento:{
+      /*miembro_nacimiento:{
         required: "Ingrese una fecha de nacimiento",
-      } 
+      } */
     },
     errorElement: 'span',
     errorPlacement: function (error, element) {
