--- a/views/registroasistencia.ejs
+++ b/views/registroasistencia.ejs
@@ -43,6 +43,8 @@
                          <% if(item.miembro_verificado==1) { %>
                          <br><span class="badge badge-danger">Verificado</span>  
                          <% } %>
+
+                         
                        
                         <input type="hidden" id='name_html_<%= item.miembro_id %>' value='<%= item.miembro_nombres %>' >
                       <input type="hidden" id='apellido_html_<%= item.miembro_id %>' value='<%= item.miembro_apellidos %>' >
@@ -75,7 +77,11 @@
                         <br><span class="badge badge-info"><%= item.ca_horario %></span>
                         <% }else{ %>
                           <button onclick="modalMiembroRegistro(<%= item.miembro_id %>)" data-id='<%=item.miembro_id %>' type="button" class="btn btn-sm btn-outline-primary btn-block btnEditarMiembro"><i class="fa fa-check-square"></i></button>
-                          <% } %>    
+                          <% } %> 
+                          
+                          <% if(item.ca_primera_vez==1) { %>
+                            <br><span class="badge badge-warning">Primera Vez</span>  
+                            <% } %>
                       </td>
                     </tr>
                     <% }) %>
