--- a/views/registroasistencia.ejs
+++ b/views/registroasistencia.ejs
@@ -54,7 +54,7 @@
                       <input type="hidden" id='telefono_html_<%= item.miembro_id %>' value='<%= item.miembro_telefono %>' >
                       <input type="hidden" id='nos_conocio_html_<%= item.miembro_id %>' value='<%= item.miembro_nos_conocio %>' >
                       <input type="hidden" id='cedula_html_<%= item.miembro_id %>' value='<%=item.miembro_cedula %>' >
-                      <input type="text" id='nacimiento_html_<%= item.miembro_id %>' value='<%=item.fecha_nac %>' >
+                      <input type="hidden" id='nacimiento_html_<%= item.miembro_id %>' value='<%=item.fecha_nac %>' >
 
                       <input type="hidden" id='observaciones_html_<%= item.miembro_id %>' value='<%=item.miembro_observaciones %>' >
 
